<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary"
    android:padding="0dp">

    <!-- Заголовок с MaterialToolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/settings_title"
        app:navigationIcon="@drawable/strel"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
        app:titleTextColor="?attr/colorOnSurface"
        app:navigationIconTint="?attr/colorOnSurface"/>

    <!-- Контейнер настроек -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">

        <!-- Переключатель темы -->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/SettingItemStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tema"
                android:textColor="?attr/colorOnSurface"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/theme_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>
        </LinearLayout>

        <!-- Кнопка поделиться -->
        <TextView
            android:id="@+id/share_button"
            style="@style/SettingItemStyle"
            android:text="@string/share"
            app:drawableEndCompat="@drawable/share"
            android:textColor="?attr/colorOnSurface"/>

        <!-- Кнопка помощи -->
        <TextView
            android:id="@+id/help_button"
            style="@style/SettingItemStyle"
            android:text="@string/help"
            app:drawableEndCompat="@drawable/help"
            android:textColor="?attr/colorOnSurface"/>

        <!-- Кнопка обратной связи -->
        <TextView
            android:id="@+id/feedback_button"
            style="@style/SettingItemStyle"
            android:text="@string/strel_r"
            app:drawableEndCompat="@drawable/strel_r"
            android:textColor="?attr/colorOnSurface"/>
    </LinearLayout>
</LinearLayout>