<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary">

    <!-- Кнопка создания плейлиста -->
    <Button
        android:id="@+id/button_create_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:background="@drawable/button_rounded_bg"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/new_playlist"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textFontWeight="500"
        android:textSize="@dimen/sp14"
        app:backgroundTint="?attr/colorPrimaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Иконка-заглушка -->
    <ImageView
        android:id="@+id/image_placeholder"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/no_playlists"
        android:src="@drawable/noinflight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_create_playlist" />

    <!-- Текст заглушки -->
    <TextView
        android:id="@+id/text_placeholder"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/no_playlists_message"
        android:textAlignment="center"
        android:textColor="?attr/android:textColorPrimary"
        android:textFontWeight="500"
        android:textSize="@dimen/sp19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_placeholder" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="129dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="218dp" />

</androidx.constraintlayout.widget.ConstraintLayout>